kubernetes/catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
  namespace: store-app-ns
  labels:
    app: catalog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
        - name: catalog
          image: roshanx/store-app-catalog:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

        
---

apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: store-app-ns
  labels:
    app: catalog
spec:
  type: ClusterIP
  selector:
    app: catalog
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
