kubernetes/dynamodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamodb
  namespace: store-app-ns
  labels:
    app: dynamodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamodb
  template:
    metadata:
      labels:
        app: dynamodb
    spec:
      containers:
        - name: dynamodb
          image: amazon/dynamodb-local
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: dynamodb
  namespace: store-app-ns
  labels:
    app: dynamodb
spec:
  type: ClusterIP
  selector:
    app: dynamodb
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
