kubernetes/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: store-app-ns
  labels:
    app: ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: roshanx/store-app-ui:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"


---

apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: store-app-ns
  labels:
    app: ui
spec:
  type: NodePort
  selector:
    app: ui
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
