kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-app-ingress
  namespace: store-app-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 8080
          - path: /api/cart(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: cart
                port:
                  number: 8080
          - path: /api/catalog(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: catalog
                port:
                  number: 8080
          - path: /api/checkout(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: checkout
                port:
                  number: 3000
          - path: /api/orders(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: orders
                port:
                  number: 8080
